--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         const global = {};
     </script>
 
-    <script src="./index-min.js"></script>
+    <script src="./min/index-min.js"></script>
 
     <script>
         'use strict';
