--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
 <body>
     <img class="preloader" src="img/preloader.svg" id="loader">
-    <z-app style="display: none;" id="app"></z-app>
+    <z-button>Test</z-button>
+    <!-- <z-app style="display: none;" id="app"></z-app> -->
 </body>
 
 </html>
