--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         Object.freeze(global);
         zoox.framework.init('./controls/', async () => {
 
-            // const model = await global.initModel();
+            const model = await global.initModel();
+
+            document.getElementById('loader').style.display = 'none';
+            document.getElementById('app').style.display = '';
 
             // const cDict = global.initDict(model);
             // global.initSett(model, cDict);
@@ -34,10 +37,8 @@
 </head>
 
 <body class="colors-light">
-    <!-- <img class="preloader" src="img/preloader.svg" id="loader"> -->
-    <!-- <z-button>Test</z-button> -->
-    <z-app id="app"></z-app>
-    <!-- <z-app style="display: none;" id="app"></z-app> -->
+    <img class="preloader" src="img/preloader.svg" id="loader">
+    <z-app style="display: none;" id="app"></z-app>
 </body>
 
 </html>
