--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 
             const model = await global.initModel();
 
+            const cDict = global.initDict(model);
+            global.initSett(model, cDict);
+
             document.getElementById('loader').style.display = 'none';
             document.getElementById('app').style.display = '';
 
-            // const cDict = global.initDict(model);
-            // global.initSett(model, cDict);
             // global.initMain(model);
         });
     </script>
