--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </script>
 </head>
 
-<body class="colors-light">
+<body>
     <img class="preloader" src="img/preloader.svg" id="loader">
     <z-app style="display: none;" id="app"></z-app>
 </body>
