--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
 <body class="colors-dark">
     <img class="preloader" src="img/preloader.svg" id="loader">
-    <z-app style="display: none;" id="app"></z-app>
+    <!-- <z-app style="display: none;" id="app"></z-app> -->
+
+    <z-modal-main-menu></z-modal-main-menu>
 </body>
 
 </html>
