--- a/controls/button.html
+++ b/controls/button.html
@@ -1,6 +1,6 @@
 <style>
     button {
-        padding: 8px 20px;
+        padding: 6px;
         cursor: pointer;
         outline: 0;
         font-size: 100%;
@@ -14,7 +14,7 @@
     :host([data-round])>button {
         background-color: rgb(0, 0, 0, 0);
         border-color: rgb(0, 0, 0, 0);
-        padding: 0;
+        /* padding: 0; */
     }
 
     :host([data-block])>button {
@@ -24,8 +24,8 @@
     }
 
     :host([data-modal])>button {
-        margin: 20px 5px 0 10px;
-        width: 45%;
+        margin: 10px 5px 0 10px;
+        width: 40%;
     }
 
     button {
