--- a/controls/icon/dict.html
+++ b/controls/icon/dict.html
@@ -1,7 +1,8 @@
 <style>
     :host {
         vertical-align: top;
-        width: 16px;
+        height: 14px;
+        width: 14px;
     }
 
     svg {
