--- a/controls/modal/dial.html
+++ b/controls/modal/dial.html
@@ -5,12 +5,12 @@
     }
 
     slot[name="content"]::slotted(*) {
-        padding: 15px;
         border-bottom-right-radius: 5px;
         border-bottom-left-radius: 5px;
+        padding: 2px 14px 10px 14px;
     }
 
-    :host([data-hide-close]) z-icon{
+    :host([data-hide-close]) z-icon {
         display: none;
     }
 
