--- a/controls/modal/main/menu.html
+++ b/controls/modal/main/menu.html
@@ -3,10 +3,10 @@
         text-align: center;
     }
 
-    z-button {
+    /* z-button {
         display: block;
-        margin: 8px;
-    }
+        margin: 6px;
+    } */
 </style>
 
 <script>
