--- a/controls/modal/main/transl.html
+++ b/controls/modal/main/transl.html
@@ -11,6 +11,10 @@
         color: var(--important);
         margin: 0 0 10px 0;
     }
+
+    div[slot="content"] {
+        padding-top: 10px;
+    }
 </style>
 
 <script>
