--- a/controls/list.html
+++ b/controls/list.html
@@ -29,7 +29,7 @@
 
     /* Track */
     ::-webkit-scrollbar-track {
-        background: var(--body);
+        background: var(--shadow-middle);
     }
 
     /* Handle */
