--- a/controls/mark.html
+++ b/controls/mark.html
@@ -19,11 +19,14 @@
     .mark>span {
         display: inline-block;
         width: 32px;
+        height: 32px;
+        line-height: 32px;
+        text-align: center;
         border-radius: 50%;
         /* background-color: var(--correct); */
         opacity: 0.6;
         font-size: 70%;
-        padding: 10px 7px;
+        padding: 3px;
         box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, .5);
     }
 
@@ -200,7 +203,7 @@
 
                 if (toCount === 0)
                     setColor(true);
-                    // eMark.children[0].classList.add('decrease');
+                // eMark.children[0].classList.add('decrease');
 
                 that.setAttribute('count-to', toCount);
 
