--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 </head>
 
 <body class="colors-dark">
-    <img class="preloader" src="img/preloader.svg" id="loader">
-    <!-- <z-app style="display: none;" id="app"></z-app> -->
+    <!-- <img class="preloader" src="img/preloader.svg" id="loader">
+    <z-app style="display: none;" id="app"></z-app> -->
 
     <z-modal-main-menu></z-modal-main-menu>
 </body>
