--- a/controls/checkbox.html
+++ b/controls/checkbox.html
@@ -1,6 +1,6 @@
 <style>
     .toggle {
-        --toggle-size: 18px;
+        --toggle-size: 20px;
         --toggle-inset: calc(var(--toggle-size) / 10);
         --slider-size: calc(var(--toggle-size) - 2 * var(--toggle-inset));
         --border-radius: calc(var(--toggle-size) / 2);
@@ -9,6 +9,7 @@
         display: flex;
         align-items: center;
         text-align: left;
+        margin: 10px 10px 0 10px;
     }
 
     .toggle-button {
@@ -16,7 +17,7 @@
         display: inline-block;
         width: calc(var(--toggle-size) * 2);
         height: var(--toggle-size);
-        margin: 8px 8px 0 8px;
+        margin-right: 10px;
     }
 
     input {
