--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <!-- <z-modal-main-menu></z-modal-main-menu> -->
 
     <z-button data-block>
-        <z-icon type="gear">{{settings}}</z-icon>
+        <z-icon-gear>settings</z-icon-gear>
     </z-button>
 
     <z-button data-block id="btnAbout">
-        <z-icon type="dict">{{about}}</z-icon>
+        <z-icon-dict>about</z-icon-dict>
     </z-button>
 </body>
 
