--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             const model = await global.initModel();
 
-            // const cDict = global.initDict(model);
+            const cDict = global.initDict(model);
             // global.initSett(model, cDict);
             // global.initMain(model);
         });
@@ -40,11 +40,11 @@
     <!-- <z-modal-main-menu></z-modal-main-menu> -->
 
     <z-button data-block>
-        <z-icon-gear></z-icon-gear> Settings
+        <z-icon-gear data-type="gear">{{settings}}</z-icon>
     </z-button>
 
     <z-button data-block id="btnAbout">
-        <z-icon-dict></z-icon-dict> About
+        <z-icon data-type="dict">{{about}}</z-icon>
     </z-button>
 </body>
 
