--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             const model = await global.initModel();
 
-            const cDict = global.initDict(model);
+            // const cDict = global.initDict(model);
             // global.initSett(model, cDict);
             // global.initMain(model);
         });
@@ -40,7 +40,7 @@
     <!-- <z-modal-main-menu></z-modal-main-menu> -->
 
     <z-button data-block>
-        <z-icon-gear data-type="gear">{{settings}}</z-icon>
+        <z-icon data-type="gear">{{settings}}</z-icon>
     </z-button>
 
     <z-button data-block id="btnAbout">
