--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         Object.freeze(global);
         zoox.framework.init('./controls/', async () => {
 
-            const model = await global.initModel();
+            // const model = await global.initModel();
 
             // const cDict = global.initDict(model);
             // global.initSett(model, cDict);
