--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
     <!-- <z-modal-main-menu></z-modal-main-menu> -->
 
-    <z-icon data-type="gear">{{settings}}</z-icon>
+    <z-icon-gear></z-icon-gear>
     <z-icon data-type="dict">{{about}}</z-icon>
+    <z-icon data-type="gear">{{settings}}</z-icon>
 </body>
 
 </html>
