--- a/controls/icon.html
+++ b/controls/icon.html
@@ -1,8 +1,7 @@
 <style>
     :host>*:nth-child(2) {
-        display: inline-block;
-        padding: 0 4px 0 0;
-
+        /* display: inline-block; */
+        /* padding: 0 4px 0 0; */
     }
 </style>
 
@@ -41,3 +40,5 @@
         }
     };
 </script>
+
+<template></template>
