--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
 
     <style>
-        z-icon-gear,
+        z-icon-back,
         z-icon {
             display: inline-block;
             width: 16px;
@@ -36,9 +36,9 @@
 </head>
 
 <body class="colors-dark">
-    <z-icon-gear></z-icon-gear>
-    <z-icon data-type="dict">{{about}}</z-icon>
-    <z-icon data-type="gear">{{settings}}</z-icon>
+    <z-icon-back></z-icon-back>
+    <z-icon data-type="back">{{about}}</z-icon>
+    <z-icon data-type="sun">{{settings}}</z-icon>
 </body>
 
 </html>
