--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 </head>
 
 <body class="colors-dark">
-    <z-icon-back></z-icon-back>
-    <z-icon data-type="back"></z-icon>
-    <z-icon data-type="close">222</z-icon>
+    <z-icon-back></z-icon-back><br/>
+    <z-icon data-type="close"></z-icon><br/>
+    <z-icon data-type="close">222</z-icon><br/>
 </body>
 
 </html>
