--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 <body class="colors-dark">
     <z-icon-back></z-icon-back><br/>
-    <z-icon data-type="close"></z-icon><br/>
-    <z-icon data-type="close">222</z-icon><br/>
+    <z-icon data-type="back"></z-icon><br/>
+    <z-icon data-type="back">222</z-icon><br/>
 </body>
 
 </html>
