--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
 
     <script>
         'use strict';
-        zoox.framework.init('./controls/', async () => {});
+        zoox.framework.init('./controls/', async () => {
+
+            const tag = document.createElement("z-icon-back");
+            document.body.appendChild(tag);
+        });
     </script>
 </head>
 
 <body class="colors-dark">
-    <z-icon-back></z-icon-back><br/>
-    <z-icon data-type="back"></z-icon><br/>
-    <z-icon data-type="back">222</z-icon><br/>
+    <z-icon-back></z-icon-back><br />
+    <z-icon data-type="back"></z-icon><br />
+    <z-icon data-type="back">222</z-icon><br />
 </body>
 
 </html>
