--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body class="colors-dark">
     <z-icon-back></z-icon-back>
-    <z-icon></z-icon>
+    <z-icon data-type="back"></z-icon>
 </body>
 
 </html>
