--- a/controls/icon.html
+++ b/controls/icon.html
@@ -20,8 +20,8 @@
                 const root = that.shadowRoot.children[1];
                 console.log(root);
 
-                if (iconName && root.children && root.children[0])
-                    root.children[0].remove();
+                // if (iconName && root.children && root.children[0])
+                //     root.children[0].remove();
 
                 const tag = document.createElement(name);
                 root.appendChild(tag);
