--- a/controls/icon.html
+++ b/controls/icon.html
@@ -31,8 +31,8 @@
                 connectedCallback: () => render(),
                 attributeChangedCallback: (name, oldValue, newValue) => {
 
-                    if (name === 'data-type')
-                        render(newValue);
+                    // if (name === 'data-type')
+                    //     render(newValue);
                 }
             };
         }
