--- a/controls/icon.html
+++ b/controls/icon.html
@@ -23,7 +23,7 @@
                 // if (iconName && root.children && root.children[0])
                 //     root.children[0].remove();
 
-                const tag = document.createElement(name);
+                const tag = document.createElement('z-icon-back');
                 root.appendChild(tag);
             };
 
