--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 </head>
 
 <body class="colors-dark">
-    13:17
+    13:19
     <z-icon-back></z-icon-back>
-    <z-icon data-type="back"></z-icon>
+    <z-icon></z-icon>
 </body>
 
 </html>
