--- a/controls/icon.html
+++ b/controls/icon.html
@@ -10,8 +10,7 @@
         // observedAttributes: () => ['data-type'],
         create: that => {
 
-            const render = () => {
-                // iconName => {
+            const render = () => iconName => {
 
                 if (!that.shadowRoot) return;
 
