--- a/controls/icon.html
+++ b/controls/icon.html
@@ -14,8 +14,8 @@
 
                 if (!that.shadowRoot) return;
 
-                // const name = 'z-icon-' + (iconName || that.shadowRoot.host.getAttribute("data-type"));
-                // zoox.framework.load(name);
+                const name = 'z-icon-' + (iconName || that.shadowRoot.host.getAttribute("data-type"));
+                zoox.framework.load(name);
 
                 const root = that.shadowRoot.children[1];
                 console.log(root);
