--- a/controls/icon.html
+++ b/controls/icon.html
@@ -18,6 +18,9 @@
                     'z-icon-' + 'back'; //that.shadowRoot.host.getAttribute("data-type");
                 // zoox.framework.load(name);
 
+                alert('that.shadowRoot.host: ' + that.shadowRoot.host);
+                alert('that.shadowRoot.host.getAttribute: ' + that.shadowRoot.host.getAttribute);
+
                 const root = that.shadowRoot.children[1];
                 console.log(root);
 
