--- a/controls/icon.html
+++ b/controls/icon.html
@@ -16,10 +16,11 @@
                 if (!that.shadowRoot)
                     return;
 
+                alert('iconName: ' + iconName + ' data-type: ' + that.shadowRoot.host.getAttribute("data-type"));
+
                 const name = 'z-icon-' + (iconName || that.shadowRoot.host.getAttribute("data-type"));
                 zoox.framework.load(name);
 
-                alert('name: ' + name);
 
                 const tag = document.createElement(name);
 
