--- a/controls/icon.html
+++ b/controls/icon.html
@@ -16,11 +16,9 @@
                 if (!that.shadowRoot)
                     return;
 
-                // alert('iconName: ' + iconName + ' data-type: ' + that.shadowRoot.host.getAttribute("data-type"));
-
                 const name = 'z-icon-' + (iconName || that.shadowRoot.host.getAttribute("data-type"));
 
-                alert('name: ' + name);
+                alert('zoox.framework.load: ' + zoox.framework.load);
                 zoox.framework.load(name);
 
                 const tag = document.createElement(name);
