--- a/controls/icon.html
+++ b/controls/icon.html
@@ -18,7 +18,7 @@
 
                 const name = 'z-icon-' + (iconName || that.shadowRoot.host.getAttribute("data-type"));
 
-                alert('zoox.framework.load: ' + zoox.framework.load);
+                alert('zoox.framework.load: ' + zoox);
                 zoox.framework.load(name);
 
                 const tag = document.createElement(name);
