--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 
+<!-- TODO: !!! ИСПРАВИТЬ ОШИБКИ ПРИ ЗАПОЛНЕНИИ ЛИСТА !!! -->
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport"
@@ -11,31 +13,42 @@
     <link rel="stylesheet" type="text/css" href="css/colors.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
 
-    <style>
-        z-icon-back,
-        z-icon {
-            display: inline-block;
-            width: 16px;
-            height: 16px;
-        }
-    </style>
+    <script>
+        const global = {};
+    </script>
 
-    <script src="./zoox.js"></script>
+    <script src="./js/model-utils.js"></script>
+    <script src="./js/model-sett.js"></script>
+    <script src="./js/model-state.js"></script>
+    <script src="./js/model-selected.js"></script>
+    <script src="./js/model-finished.js"></script>
+    <script src="./js/model-dict.js"></script>
+    <script src="./js/model-dicts.js"></script>
+    <script src="./js/model.js"></script>
+
+    <script src="./js/zoox.js"></script>
+
+    <script src="./js/ctrl-main.js"></script>
+    <script src="./js/ctrl-sett.js"></script>
+    <script src="./js/ctrl-dict.js"></script>
 
     <script>
         'use strict';
+        Object.freeze(global);
         zoox.framework.init('./controls/', async () => {
 
-            // const tag = document.createElement("z-icon-back");
-            // document.body.appendChild(tag);
+            const model = await global.initModel();
+
+            const cDict = global.initDict(model);
+            global.initSett(model, cDict);
+            global.initMain(model);
         });
     </script>
 </head>
 
-<body class="colors-dark">
-    18:24
-    <z-icon-back></z-icon-back>
-    <z-icon data-type="back"></z-icon>
+<body>
+    <img class="preloader" src="img/preloader.svg" id="loader">
+    <z-app style="display: none;" id="app"></z-app>
 </body>
 
 </html>
