--- a/index.html
+++ b/index.html
@@ -35,20 +35,28 @@
     <script>
         'use strict';
         Object.freeze(global);
-        zoox.framework.init('./controls/', async () => {
 
-            const model = await global.initModel();
+        try {
 
-            const cDict = global.initDict(model);
-            global.initSett(model, cDict);
-            global.initMain(model);
-        });
+            zoox.framework.init('./controls/', async () => {
+
+                const model = await global.initModel();
+
+                const cDict = global.initDict(model);
+                global.initSett(model, cDict);
+                global.initMain(model);
+            });
+
+        } catch (e) {
+
+            alert('Error:' + e);
+        }
     </script>
 </head>
 
-<body>
-    <img class="preloader" src="img/preloader.svg" id="loader">
-    <z-app style="display: none;" id="app"></z-app>
+<body class="colors-light">
+    <img class="preloader" src="img/preloader.svg" id="loader" style="display: none;">
+    <z-app id="app"></z-app>
 </body>
 
 </html>
