--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
                 const model = await window.global.initModel();
 
                 const cDict = window.global.initDict(model);
+                alert('Dicts is loaded');
+
                 window.global.initSett(model, cDict);
+                alert('Settings is loaded');
+                
                 window.global.initMain(model);
+                alert('All is loaded!');
             });
 
         } catch (e) {
@@ -54,10 +59,10 @@
     </script>
 </head>
 
-<!-- <body class="colors-light"> -->
-<body>
-    <img class="preloader" src="img/preloader.svg" id="loader">
-    <z-app id="app" style="display: none;"></z-app>
+<body class="colors-light">
+<!-- <body> -->
+    <img class="preloader" src="img/preloader.svg" id="loader" style="display: none;">
+    <z-app id="app"></z-app>
 </body>
 
 </html>
