--- a/controls/list.html
+++ b/controls/list.html
@@ -1,4 +1,6 @@
 <style>
+    @import "../css/scroll.css";
+
     .list-container {
         position: relative;
         height: 100%;
@@ -23,19 +25,19 @@
     }
 
     /* Width */
-    ::-webkit-scrollbar {
+    /* ::-webkit-scrollbar {
         width: 6px;
-    }
+    } */
 
     /* Track */
-    ::-webkit-scrollbar-track {
+    /* ::-webkit-scrollbar-track {
         background: var(--shadow-middle);
-    }
+    } */
 
     /* Handle */
-    ::-webkit-scrollbar-thumb {
+    /* ::-webkit-scrollbar-thumb {
         background: var(--important);
-    }
+    } */
 </style>
 
 <script>
