--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <title>Words training</title>
 
+    <link rel="manifest" href="manifest.webmanifest">
+
     <link rel="stylesheet" type="text/css" href="css/colors.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
 
@@ -43,13 +45,13 @@
                 const model = await window.global.initModel();
 
                 const cDict = window.global.initDict(model);
-                alert('Dicts is loaded');
+                // alert('Dicts is loaded');
 
                 window.global.initSett(model, cDict);
-                alert('Settings is loaded');
+                // alert('Settings is loaded');
                 
                 window.global.initMain(model);
-                alert('All is loaded!');
+                // alert('All is loaded!');
             });
 
         } catch (e) {
