--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 window.global.initSett(model, cDict);
                 // alert('Settings is loaded');
-                
+
                 window.global.initMain(model);
                 // alert('All is loaded!');
             });
@@ -61,10 +61,9 @@
     </script>
 </head>
 
-<body class="colors-light">
-<!-- <body> -->
-    <img class="preloader" src="img/preloader.svg" id="loader" style="display: none;">
-    <z-app id="app"></z-app>
+<body>
+    <img class="preloader" src="img/preloader.svg" id="loader">
+    <z-app id="app" style="display: none;"></z-app>
 </body>
 
 </html>
