--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Words training</title>
 
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="apple-touch-icon" sizes="196x196" href="img/icon196.png">
 
     <link rel="stylesheet" type="text/css" href="css/colors.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
