--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         window.global = {};
     </script>
 
-    <script src="./js/model-utils.js"></script>
+    <!-- <script src="./js/model-utils.js"></script>
     <script src="./js/model-sett.js"></script>
     <script src="./js/model-state.js"></script>
     <script src="./js/model-selected.js"></script>
@@ -45,7 +45,8 @@
     <script src="./js/model-dicts.js"></script>
     <script src="./js/model.js"></script>
 
-    <script src="./js/zoox.js"></script>
+    <script src="./js/zoox.js"></script> -->
+    <script src="./js/index-min.js"></script>
 
     <script src="./js/ctrl-main.js"></script>
     <script src="./js/ctrl-sett.js"></script>
